Se modifica el nombre del controlador disponibilidad a verificarRequisitos
