# swagger/swagger.yml
@@ -22,24 +22,6 @@ paths:
           schema:
             $ref: '#/definitions/models.Cupos'
         "403": {}
-  /disponibilidad/Registrar:
-    post:
-      tags:
-      - disponibilidad
-      description: get requisitos
-      operationId: DisponibilidadController.Registrar
-      parameters:
-      - in: body
-        name: body
-        description: body for Registrar content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Datos'
-      responses:
-        "200":
-          description: '{bool}'
-        "403":
-          description: body is empty
   /fechas/ObtenerFechas:
     get:
       tags:
@@ -67,6 +49,24 @@ paths:
       responses:
         "200":
           description: '{string}'
+        "403":
+          description: body is empty
+  /verificarRequisitos/Registrar:
+    post:
+      tags:
+      - verificarRequisitos
+      description: get requisitos
+      operationId: VerificarRequisitosController.Registrar
+      parameters:
+      - in: body
+        name: body
+        description: body for Registrar content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Datos'
+      responses:
+        "200":
+          description: '{bool}'
         "403":
           description: body is empty
 definitions:
@@ -135,6 +135,4 @@ definitions:
       NumAdmitidos:
         $ref: '#/definitions/models.Cupos'
       Solicitudes:
-        type: array
-        items:
-          "$ref": "#/definitions/models.SolicitudMaterias"
+        $ref: '#/definitions/1010.<nil>.SolicitudMaterias'
